force-app/main/default/objects/Committee_Assignment__c/Committee_Assignment__c.object-meta.xml
<CustomObject>
    <label>Committee Assignment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Committee Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>