force-app/main/default/objects/Committee_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The legislator or organization holding this committee seat.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Committee Assignments</relationshipLabel>
    <relationshipName>Committee_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>