force-app/main/default/objects/Committee_Assignment__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <label>Committee</label>
    <referenceTo>Committee__c</referenceTo>
    <relationshipLabel>Committee Assignments</relationshipLabel>
    <relationshipName>Committee_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>