force-app/main/default/objects/Committee_Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Leave blank while the assignment is ongoing.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>