force-app/main/default/objects/Committee_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>