force-app/main/default/objects/Committee_Assignment__c/listViews/Current_Assignments.listView-meta.xml
<ListView>
    <fullName>Current_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Committee__c</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <label>Current Assignments</label>
    <sharedTo>
        <group>Gov_Relations</group>
    </sharedTo>
</ListView>